# genai

./: .gitignore
week_1/: main.py  readme.md  streamlit_app.py
week_3/: llm_client.py  requirements.txt  streamlit_app.py
week_3/components/: news_fetch.py  rag_utils.py  yt_fetch.py
week_4/: README.md  app.py  pyproject.toml  streamlit_app.py
week_4/src/blogagentic/graphs/: graph_builder.py
week_4/src/blogagentic/llms/: groq_llm.py
week_4/src/blogagentic/nodes/: blog_node.py
week_4/src/blogagentic/states/: blog_state.py
week_4/src/blogagentic/tools/: web_research.py
